10929
Standalone reproduction:

{code}
object Test {
  val x = new SparkContext(master = "")
}

class SparkContext(config: Any) {

  /** Scaladoc comment */
  def this(
      master: String,
      appName: String = "") = this(null)
}
{code}

{noformat}
warning: dropping dependency on node with no phase object: pickler
test.scala:2: error: not enough arguments for constructor SparkContext: (master: String, appName: String)SparkContext
  val x = new SparkContext(master = "")
          ^
{noformat}

Removing scaladoc from the constructor with defaults seems to hide the bug.
